Added sort by category name